Update assignment.refactoring.md